*) New: GoldenEye: Source gamesupport
*) New: Left for dead 2 gamesupport
*) New: Players timeline
*) Update: L4D, Hidden and other gamesupport files.
*) Update: Server add-ons list
*) Update: some interface changes
*) Fixed: timestamp option was not used correctly.
*) Fixed: deleted lastUpdate column from player table. is now replaced with
	skillchangeDate
*) Fixed: players count per day
*) Changed: L4D improvements. zombies are now handled as BOT to clear up
	the stats
*) Closed: #14
*) Closed: #15
*) Closed: #39
*) Close: #18

1.62 (2011-05-18)
*) New: Design styles (css) updated.
*) New: Zombie Panic! Source had no weapon pics
*) New: Most time online chart at player overview. Needs serverplugin
	which provides time info ( eg. AMX Mod X statsplugin )
*) New: Game reset by server or all
*) New: Command line argument -q|--quiet will surpress all output
	Useful for cron jobs
*) Changed: New Rank section in player detail page. #37
*) Updated: blue.css and default.css small design changes
*) Updated: weapon and map pictures
*) Fixed: old weapon images converted to png
*) Fixed: #34
*) Fixed: number format error in player detail page
*) Fixed: #36
*) Fixed: #4
*) Closed: #24

1.61 (2011-03-08)
*) New: New css style blue.css
*) New: favicon.ico now  available ;-)
*) New: Admintool added to clear old signatures ( older then one day )
*) New: Opposing Force CTF/DM role models added
*) New: Admin host stats available again
*) Changed: New Bug Tracker. Now FlySpray
*) Changed: Mysql escape function on PHP now mysql_real_escape_string
*) Changed: cleaner mysql query strings
*) Changed: Opposing Force gamesupport files merged. To upgrade an existing
		installation import the gamesupport file manually to the database
		( thx to h3erbert )
*) Changed: Cleaner gamesupport sql files
*) Fixed: Ticket #28
*) Fixed: Improved Opposing Force gamesupport ( thx to h3rbert )
*) Fixed: Weapon mix up now in oposing force now fixed ( thx to h3rbert )