@@ -1,7 +1,7 @@
 <?php
-define('DB_HOST','127.0.0.1');
+define('DB_HOST','localhost');
 define('DB_USER','user');
 define('DB_PASS','test');
-define('DB_NAME','hlstats_dev');
+define('DB_NAME','hlstats');
 define('DB_PREFIX','hlstats');
 ?>
